[gd_scene load_steps=52 format=3 uid="uid://b6cgy0j40ivsv"]

[ext_resource type="Texture2D" uid="uid://badnokl77p2t0" path="res://img/map1.png" id="1_psdme"]
[ext_resource type="Texture2D" uid="uid://bnw40raifeyc1" path="res://img/アレン/Player.png" id="2_tijag"]
[ext_resource type="Texture2D" uid="uid://cy7lj8ty5t4sn" path="res://img/アレン/Player 上0.png" id="3_a8k3p"]
[ext_resource type="Texture2D" uid="uid://di8c8cu687elp" path="res://img/アレン/Player 右0.png" id="4_ly5k5"]
[ext_resource type="Texture2D" uid="uid://c222rgl4k4fb4" path="res://img/アレン/Player 左0.png" id="5_t8647"]
[ext_resource type="Texture2D" uid="uid://dy4m0dnima4yc" path="res://img/アレン/Player 上1.png" id="6_vkcst"]
[ext_resource type="Texture2D" uid="uid://evm4vy70ml8" path="res://img/アレン/Player 上2.png" id="7_u48l2"]
[ext_resource type="Texture2D" uid="uid://bey1ypsd11dpy" path="res://img/アレン/Player 下1.png" id="8_ld1he"]
[ext_resource type="Texture2D" uid="uid://8pdffqi6ld8" path="res://img/アレン/Player 下2.png" id="9_mnufa"]
[ext_resource type="Texture2D" uid="uid://c1ksyxneun6l0" path="res://img/アレン/Player 右1.png" id="10_2q15o"]
[ext_resource type="Texture2D" uid="uid://bt6kjn85jbyf0" path="res://img/アレン/Player 右2.png" id="11_vnoki"]
[ext_resource type="Texture2D" uid="uid://bqlsoi1hfc0g8" path="res://img/アレン/Player 左1.png" id="12_i27qr"]
[ext_resource type="Texture2D" uid="uid://cw1r50jrkf6we" path="res://img/アレン/Player 左2.png" id="13_jf0dk"]
[ext_resource type="Script" path="res://scenes/npc_elba.gd" id="14_nmnbn"]
[ext_resource type="Texture2D" uid="uid://81cyv2kwg5rg" path="res://img/elba.png" id="14_yxcyc"]
[ext_resource type="Script" path="res://area_2d.gd" id="15_nx1rq"]
[ext_resource type="Script" path="res://dialogue_box.gd" id="16_mrieo"]
[ext_resource type="Script" path="res://旅商人.gd" id="17_bkapc"]
[ext_resource type="Texture2D" uid="uid://ce3bdqgwp0s8" path="res://img/map1_merchant.png" id="18_7tkyv"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_s62n8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5t2x"]
size = Vector2(90, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ectli"]
size = Vector2(95, 183)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_auhag"]
size = Vector2(31, 132.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_sg6t7"]
radius = 19.0263

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vfyfq"]
size = Vector2(49.909, 43.3024)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dptry"]
size = Vector2(61, 176.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_1dc81"]
radius = 27.4591

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xcxe5"]
size = Vector2(297, 178.428)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kdxit"]
size = Vector2(192, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bf8ak"]
size = Vector2(134, 40)

[sub_resource type="CircleShape2D" id="CircleShape2D_aq23x"]
radius = 6.55521

[sub_resource type="CircleShape2D" id="CircleShape2D_asfr0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0kob3"]
size = Vector2(156.214, 224.932)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idkf4"]
size = Vector2(62.1626, 70.8299)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rb4ms"]
size = Vector2(65.4329, 71.6409)

[sub_resource type="CircleShape2D" id="CircleShape2D_px6oo"]
radius = 21.2523

[sub_resource type="CircleShape2D" id="CircleShape2D_kroe0"]
radius = 18.6504

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wofip"]
size = Vector2(31.1399, 68.1295)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w03sd"]
size = Vector2(29.0813, 25.4102)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8ed4p"]
size = Vector2(60.586, 168.969)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vurny"]
size = Vector2(424.255, 166.402)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_or8ve"]
size = Vector2(315.894, 182.49)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8odea"]
size = Vector2(92.8399, 41.9034)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4wxv3"]
size = Vector2(112.296, 100.637)

[sub_resource type="GDScript" id="GDScript_12tgc"]
script/source = "extends CharacterBody2D

var speed = 1000  # 移動速度
@onready var animated_sprite = $AnimatedSprite2D
@onready var dialogue_system = get_node(\"/root/Map1/CanvasLayer/DialogueBox\")  # Dialogueノードへの参照

var can_interact = false  # 会話可能かどうかを示すフラグ

var animation_timer = 0.0
var animation_frame = 1
var animation_direction = \"下\"  # 初期値を設定

func _physics_process(delta):
	
	# 会話中は移動を無効化
	if dialogue_system.is_dialogue_active:
		return  # 処理を終了
	
	var direction = Vector2.ZERO
	var is_moving = false

	# 入力処理
	if Input.is_action_pressed(\"ui_right\"):
		direction.x += 1
		animation_direction = \"右\"
		is_moving = true
	if Input.is_action_pressed(\"ui_left\"):
		direction.x -= 1
		animation_direction = \"左\"
		is_moving = true
	if Input.is_action_pressed(\"ui_down\"):
		direction.y += 1
		animation_direction = \"下\"
		is_moving = true
	if Input.is_action_pressed(\"ui_up\"):
		direction.y -= 1
		animation_direction = \"上\"
		is_moving = true
	
	# アニメーションの更新
	if is_moving:
		# タイマーを更新
		animation_timer += delta
		if animation_timer > 0.2:  # フレームの切り替え間隔（秒）
			animation_timer = 0
			animation_frame = 1 if animation_frame == 2 else 2  # フレームを切り替え
		var animation_name = \"移動_\" + animation_direction + str(animation_frame)
		animated_sprite.play(animation_name)
	else:
		# 停止アニメーション（最後の方向に基づく）
		var stop_animation_name = \"停止_\" + animation_direction
		animated_sprite.play(stop_animation_name)

	# 移動処理
	self.velocity = direction.normalized() * speed
	move_and_slide()

func _on_area_2d_body_entered(body: Node2D) -> void:
	if body.name == \"Player\":
		can_interact = true

func _on_area_2d_body_exited(body: Node2D) -> void:
	if body.name == \"Player\":
		can_interact = false
"

[sub_resource type="SpriteFrames" id="SpriteFrames_5ac05"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_a8k3p")
}],
"loop": true,
"name": &"停止_上",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_tijag")
}],
"loop": true,
"name": &"停止_下",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_ly5k5")
}],
"loop": true,
"name": &"停止_右",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_t8647")
}],
"loop": true,
"name": &"停止_左",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_vkcst")
}],
"loop": true,
"name": &"移動_上1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_u48l2")
}],
"loop": true,
"name": &"移動_上2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_ld1he")
}],
"loop": true,
"name": &"移動_下1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_mnufa")
}],
"loop": true,
"name": &"移動_下2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_2q15o")
}],
"loop": true,
"name": &"移動_右1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_vnoki")
}],
"loop": true,
"name": &"移動_右2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_i27qr")
}],
"loop": true,
"name": &"移動_左1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("13_jf0dk")
}],
"loop": true,
"name": &"移動_左2",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_71e1g"]
size = Vector2(18.8167, 14.7006)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_phjok"]
size = Vector2(22.0631, 34.4557)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kgnge"]
size = Vector2(22.9286, 19.0633)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5il32"]
size = Vector2(22.1944, 35.3015)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_alpu6"]
size = Vector2(22.6604, 35.7819)

[node name="Map1" type="Sprite2D"]
position = Vector2(3799, 2212)
scale = Vector2(5.92399, 6.2447)
texture = ExtResource("1_psdme")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(-2, 0)
collision_layer = 2
physics_material_override = SubResource("PhysicsMaterial_s62n8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-184, 195.5)
shape = SubResource("RectangleShape2D_t5t2x")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-272.5, 65.5)
shape = SubResource("RectangleShape2D_ectli")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-212.5, 56.75)
shape = SubResource("RectangleShape2D_auhag")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-370, 113)
shape = SubResource("CircleShape2D_sg6t7")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-386.545, -26.5918)
shape = SubResource("RectangleShape2D_vfyfq")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-511.5, -189.25)
shape = SubResource("RectangleShape2D_dptry")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-510, -92)
shape = SubResource("CircleShape2D_1dc81")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-336.5, -189.786)
shape = SubResource("RectangleShape2D_xcxe5")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-351, -116.5)
shape = SubResource("RectangleShape2D_kdxit")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-321, -90)
shape = SubResource("RectangleShape2D_bf8ak")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-564, -84)
scale = Vector2(1.80756, 1.80615)
shape = SubResource("CircleShape2D_aq23x")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-594, -141)
shape = SubResource("CircleShape2D_asfr0")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-114.074, -183.029)
shape = SubResource("RectangleShape2D_0kob3")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-160.755, -72.724)
shape = SubResource("RectangleShape2D_idkf4")

[node name="CollisionShape2D15" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-64.6447, -73.1295)
shape = SubResource("RectangleShape2D_rb4ms")

[node name="CollisionShape2D16" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-19.811, -98.95)
shape = SubResource("CircleShape2D_px6oo")

[node name="CollisionShape2D17" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(110.247, -50.2861)
shape = SubResource("CircleShape2D_kroe0")

[node name="CollisionShape2D18" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(111.641, -143.559)
shape = SubResource("RectangleShape2D_wofip")

[node name="CollisionShape2D19" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(174.872, -98.6781)
shape = SubResource("RectangleShape2D_w03sd")

[node name="CollisionShape2D20" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(159.12, -185.057)
shape = SubResource("RectangleShape2D_8ed4p")

[node name="CollisionShape2D21" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(388.462, -184.584)
shape = SubResource("RectangleShape2D_vurny")

[node name="CollisionShape2D22" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(256.846, 93.6781)
shape = SubResource("RectangleShape2D_or8ve")

[node name="CollisionShape2D23" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(-20.9934, 73.671)
shape = SubResource("RectangleShape2D_8odea")

[node name="CollisionShape2D24" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(543.76, -16.2096)
shape = SubResource("RectangleShape2D_4wxv3")

[node name="Player" type="CharacterBody2D" parent="."]
visibility_layer = 3
z_index = 1
collision_mask = 2
script = SubResource("GDScript_12tgc")

[node name="Sprite2D" type="Sprite2D" parent="Player"]
visible = false
visibility_layer = 2
position = Vector2(45.8571, -9.56681)
texture = ExtResource("2_tijag")

[node name="Camera2D" type="Camera2D" parent="Player"]
visibility_layer = 2
position = Vector2(46.9829, -15.2919)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
visibility_layer = 2
position = Vector2(45.5774, -14.092)
sprite_frames = SubResource("SpriteFrames_5ac05")
animation = &"停止_下"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
visibility_layer = 2
position = Vector2(45.195, -7.06192)
shape = SubResource("RectangleShape2D_71e1g")

[node name="NPC_Elba" type="StaticBody2D" parent="."]
collision_layer = 2
script = ExtResource("14_nmnbn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC_Elba"]
position = Vector2(239.05, -105.847)
shape = SubResource("RectangleShape2D_phjok")

[node name="Sprite2D" type="Sprite2D" parent="NPC_Elba"]
light_mask = 2
position = Vector2(236.751, -101.71)
scale = Vector2(1.92092, 1.70833)
texture = ExtResource("14_yxcyc")

[node name="Area2D" type="Area2D" parent="NPC_Elba"]
collision_layer = 2
script = ExtResource("15_nx1rq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="NPC_Elba/Area2D"]
position = Vector2(239.15, -97.6472)
shape = SubResource("RectangleShape2D_kgnge")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueBox" type="ColorRect" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1848.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.490196)
script = ExtResource("16_mrieo")

[node name="Button1" type="Button" parent="CanvasLayer/DialogueBox"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
offset_left = 2000.0
offset_top = -140.0
offset_right = 2200.0
offset_bottom = -77.0
theme_override_font_sizes/font_size = 35
text = "aaaaaaaaaaaaaaaaaa"

[node name="Button2" type="Button" parent="CanvasLayer/DialogueBox"]
layout_mode = 2
offset_left = 2000.0
offset_top = -70.0
offset_right = 2292.0
offset_bottom = -7.0
theme_override_font_sizes/font_size = 35
text = "bbbbbbbbbbbbb"

[node name="CharNameLabel" type="Label" parent="CanvasLayer/DialogueBox"]
visible = false
layout_mode = 0
offset_left = 1230.0
offset_right = 1430.0
offset_bottom = 55.0
theme_override_font_sizes/font_size = 35
text = "elba"
autowrap_mode = 2

[node name="DialogueLabel" type="Label" parent="CanvasLayer/DialogueBox"]
visible = false
layout_mode = 0
offset_left = 1100.0
offset_top = 30.0
offset_right = 1300.0
offset_bottom = 195.0
theme_override_font_sizes/font_size = 35
vertical_alignment = 1

[node name="旅商人" type="StaticBody2D" parent="."]
position = Vector2(0.0472704, 0.0480486)
collision_layer = 2
collision_mask = 2
script = ExtResource("17_bkapc")

[node name="Sprite2D" type="Sprite2D" parent="旅商人"]
position = Vector2(498.603, -92.9268)
scale = Vector2(0.815761, 0.848007)
texture = ExtResource("18_7tkyv")

[node name="CollisionShape2D" type="CollisionShape2D" parent="旅商人"]
position = Vector2(496.702, -85.0444)
shape = SubResource("RectangleShape2D_5il32")

[node name="Area2D" type="Area2D" parent="旅商人"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="旅商人/Area2D"]
position = Vector2(496.726, -85.0359)
shape = SubResource("RectangleShape2D_alpu6")

[connection signal="body_entered" from="NPC_Elba/Area2D" to="NPC_Elba" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="NPC_Elba/Area2D" to="NPC_Elba" method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="旅商人/Area2D" to="旅商人" method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="旅商人/Area2D" to="旅商人" method="_on_area_2d_body_exited"]
